# Neobis_Python_Auth_Project

./: pyproject.toml
Auth_project/: manage.py
Auth_project/Auth_project/: asgi.py  settings.py  urls.py  wsgi.py
Auth_project/users/: forms.py  urls.py  views.py
Auth_project/users/migrations/: 0001_create_user_model.py
Auth_project/users/templates/users/: base.html  login.html  registration.html
auth/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: base.html  email_verification.html  home.html  login.html  password_reset_form.html  registration.html
